# construct-ios

./: .gitignore  AGENTS.md  ANALYSIS_INDEX.md  ARCHITECTURE.md  CURRENT_STATUS.md  Cargo.toml  FFI_QUICK_REFERENCE.txt  FUNCTION_INVENTORY.txt  IMPLEMENTATION_EXAMPLES.md  LICENSE  M4_MIGRATION_ANALYSIS.md  README.md  README_ANALYSIS.md  RUST_CORE_FFI_ANALYSIS.md  STABILIZATION_ROADMAP.md  START_HERE.txt  XCODE_TESTING.md  build_crypto_lib.sh  generate_grpc_swift.sh  generate_swift_bindings.sh  package-lock.json  package.json  patch_uniffi_unsafe.sh  pnpm-lock.yaml  qr_size_comparison.swift  test-wasm.mjs
.cargo/: config.toml
.githooks/: commit-msg
Construct Desktop/: Construct_DesktopApp.swift  DesktopCommands.swift  DesktopTheme.swift
Construct DesktopTests/: Construct_DesktopTests.swift
Construct DesktopUITests/: Construct_DesktopUITests.swift  Construct_DesktopUITestsLaunchTests.swift
ConstructCore.xcframework/: Info.plist
ConstructEngine.xcframework/: Info.plist
ConstructMessenger/: AppDelegate.swift  ConstructMessenger-Bridging-Header.h  ConstructMessenger.entitlements  ConstructMessengerApp.swift  ContentView.swift  Info.plist  construct_core.swift  construct_coreFFI.h  construct_coreFFI.modulemap  construct_engine.swift
ConstructMessenger.xcodeproj/: project.pbxproj  project.pbxproj.backup
ConstructMessengerTests/: BackgroundDecryptTests.swift  CallSignalE2EETests.swift  ConnectionLoopTests.swift  ConstructMessengerTests.swift  CryptoIntegrationTests.swift  CryptoManagerTests.swift.old  CryptoWireIntegrationTests.swift  GRPCCallExecutorTests.swift  H3GRPCIntegrationTest.swift  IceAutoModeCoordinatorTests.swift  IceConnectionReducerTests.swift  IceDPIHeuristicTests.swift  IceFailurePolicyTests.swift  MessagePaddingTests.swift  NWConnectionQUICTest.swift  PerformanceBenchmarks.swift  ReconnectionGuardTests.swift  ReconnectionIntegrationTests.swift  SessionInitFlowTests.swift  SessionRaceConditionTests.swift  SessionStoreTests.swift  VeilFailurePolicyTests.swift  ViewModelTests.swift.old  WirePayloadCoderTests.swift
docs/: API_V3_SPEC.md  ARCHITECTURE_RESPONSIBILITY.md  CAMERA_PERMISSION_TODO.md  CAMERA_TESTING_GUIDE.md  CLIENT_MIGRATION_GUIDE.md  CLIENT_STRATEGY.md  CONTACT_LINK_FORMAT.md  CORE_REST_MIGRATION_PLAN.md  CRYPTO_REFACTORING_PLAN.md  JWT_TOKEN_FIX.md  KEYS_RESPONSIBILITY.md  MULTI_ACCOUNT_QUICK_START.md  POST_QUANTUM_HYBRID.md  PROFILE_SHARING_IMPLEMENTATION.md  PROFILE_SHARING_TODO.md  QUICK_DNS_SETUP.md  ROADMAP.md  RUST_SWIFT_INTEGRATION.md  RUST_SWIFT_INTEGRATION_PLAN.md  SECURITY_AUDIT_REPORT.md  SERVER_SETUP_GUIDE.md  SESSION_2026-01-26_FIXES.md  SESSION_2026-01-26_SUMMARY.md  SESSION_DIAGNOSTICS.md  SESSION_FLOW_ARCHITECTURE.md  TESTING.md  TEST_STRATEGY.md  specification.md
logs/: construct-logs-1772183236.299727.txt  construct-logs-1772369471.932234.txt  construct-logs-1772369511.816509.txt  construct-logs-1772642563.770767.txt  (+6 more)
tests/: dpi_probe.py  (+1 more)
(+506 files in other folders)
