[workspace]
members = [
    "packages/core",
    # "crates/*",  # Раскомментировать когда добавим вспомогательные крейты
]

resolver = "2"

[workspace.dependencies]
# Общие зависимости для всех крейтов
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "1.0"
anyhow = "1.0"

# Криптография
x25519-dalek = { version = "2.0", features = ["reusable_secrets", "static_secrets"] }
ed25519-dalek = { version = "2.0", features = ["std", "rand_core"] }
chacha20poly1305 = { version = "0.10", features = ["std", "getrandom"] }
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1.0", features = ["zeroize_derive"] }
pqcrypto-kyber = "0.7"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Сериализация
rmp-serde = "1.1"
bincode = "1.3"
base64 = "0.21"
serde_json = "1.0"

# Утилиты
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
tracing = "0.1"

[workspace.package]
version = "0.1.2"
authors = ["Konstruct Team"]
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/maximeliseyev/construct-messenger"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
